--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "dotenv": "^16.0.0",
     "ejs": "^3.1.7",
     "express": "^4.18.0",
+    "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.19.0"
+    "sequelize": "^6.19.0",
+    "uuid": "^8.3.2"
   }
 }
