--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A simple workforce management app",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "NODE_ENV=development nodemon index.js",
+    "prod": "NODE_ENV=production nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -20,9 +22,14 @@
   },
   "homepage": "https://github.com/akomarzx/WFM_app#readme",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.7",
+    "ejs-mate": "^4.0.0",
     "express": "^4.18.0",
+    "express-session": "^1.17.3",
+    "joi": "^17.6.0",
+    "moment": "^2.29.3",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.19.0",
