--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/akomarzx/WFM_app#readme",
   "dependencies": {
     "connect-flash": "^0.1.1",
+    "connect-session-sequelize": "^7.1.3",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.7",
     "ejs-mate": "^4.0.0",
