--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/akomarzx/WFM_app#readme",
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "connect-flash": "^0.1.1",
     "connect-session-sequelize": "^7.1.3",
     "dotenv": "^16.0.0",
@@ -30,6 +31,7 @@
     "express": "^4.18.0",
     "express-session": "^1.17.3",
     "joi": "^17.6.0",
+    "jquery": "^3.6.0",
     "moment": "^2.29.3",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
