--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "NODE_ENV=development nodemon index.js",
+    "dev": "NODE_ENV=development PORT=3000 nodemon app.js --ext ejs,js,html,css",
+    "try": "NODE_ENV=development PORT=3000 nodemon app.js --ext .*",
     "prod": "NODE_ENV=production nodemon index.js"
   },
   "repository": {
@@ -37,5 +38,10 @@
     "mysql2": "^2.3.3",
     "sequelize": "^6.19.0",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "connect-livereload": "^0.6.1",
+    "livereload": "^0.9.3",
+    "nodemon": "^2.0.16"
   }
 }
