--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "node-schedule": "^2.1.0",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.19.0",
     "uuid": "^8.3.2"
   },
