--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "NODE_ENV=development PORT=3000 nodemon app.js --ext ejs,js,html,css",
+    "dev": "NODE_ENV=development nodemon app.js --ext ejs,js,html,css",
     "prod": "NODE_ENV=production nodemon index.js"
   },
   "repository": {
