--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "NODE_ENV=development nodemon app.js --ext ejs,js,html,css",
-    "prod": "NODE_ENV=production nodemon index.js"
+    "prod": "NODE_ENV=production node app.js"
   },
   "repository": {
     "type": "git",
