--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
   },
   "devDependencies": {
     "connect-livereload": "^0.6.1",
+    "eslint": "^8.17.0",
+    "eslint-config-google": "^0.14.0",
     "livereload": "^0.9.3",
     "nodemon": "^2.0.16"
   }
