--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express-session": "^1.17.3",
     "joi": "^17.6.0",
     "jquery": "^3.6.0",
+    "method-override": "^3.0.0",
     "moment": "^2.29.3",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
