--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "connect-livereload": "^0.6.1",
     "eslint": "^8.17.0",
     "eslint-config-google": "^0.14.0",
-    "livereload": "^0.9.3",
-    "nodemon": "^2.0.16"
+    "livereload": "^0.9.3"
   }
 }
