--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/akomarzx/WFM_app#readme",
   "dependencies": {
     "@joi/date": "^2.1.0",
+    "@sequelize/core": "^7.0.0-alpha.10",
     "bcrypt": "^5.0.1",
     "bootstrap": "^5.1.3",
     "connect-flash": "^0.1.1",
@@ -41,7 +42,6 @@
     "node-schedule": "^2.1.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "sequelize": "^6.19.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
