--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "node-schedule": "^2.1.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "sanitize-html": "^2.7.0",
     "sequelize": "^6.21.1",
     "uuid": "^8.3.2"
   },
