--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@joi/date": "^2.1.0",
     "bcrypt": "^5.0.1",
     "bootstrap": "^5.1.3",
+    "cls-hooked": "^4.2.2",
     "connect-flash": "^0.1.1",
     "connect-session-sequelize": "^7.1.3",
     "dotenv": "^16.0.0",
