--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/akomarzx/WFM_app#readme",
   "dependencies": {
     "@joi/date": "^2.1.0",
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "bootstrap": "^5.1.3",
     "cls-hooked": "^4.2.2",
