--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "bootstrap": "^5.1.3",
+    "chalk": "^4.1.2",
     "cls-hooked": "^4.2.2",
     "connect-flash": "^0.1.1",
     "connect-session-sequelize": "^7.1.3",
