--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "method-override": "^3.0.0",
     "moment": "^2.29.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "node-schedule": "^2.1.0",
     "passport": "^0.6.0",
