--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "passport-local": "^1.0.0",
     "sanitize-html": "^2.7.0",
     "sequelize": "^6.21.1",
+    "sharp": "^0.30.7",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
