--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cls-hooked": "^4.2.2",
     "connect-flash": "^0.1.1",
     "connect-session-sequelize": "^7.1.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.7",
     "ejs-mate": "^4.0.0",
